infrastructure/services/vms/core/etc/firewall
*nat
COMMIT
*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT ! -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -p tcp --dport 953 -j ACCEPT
## specifically is required tcp/953 src http://www.linuxquestions.org/questions/linux-server-73/named-bind9-service-takes-a-long-time-to-stop-4175465714
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i eth1 -p tcp -m multiport --dports 53 -j ACCEPT
-A INPUT -i eth1 -p udp -m multiport --dports 53 -j ACCEPT
-A INPUT -i eth2 -p tcp -m multiport --dports 53 -j ACCEPT
-A INPUT -i eth2 -p udp -m multiport --dports 53 -j ACCEPT
-A INPUT -j DROP
COMMIT
*mangle
COMMIT
